Revision history for DateTime-US

{{$NEXT}}
    - Add new subs to provide DST begin/end DateTimes for a year
      + begin-dst :$year => date DST begins at 0200 local
      + dst-begin (alias)
      + end-dst   :$year => date DST ends   at 0200 local
      + dst-end   (alias)

0.1.2  2024-01-28T20:50:39-06:00
    - Add 3-OS tests
    - Use zef for Windows tests
    - Update copyright year
    - Remove useless test causing problems on Windows

0.1.1  2022-10-02T16:33:23-05:00
    - Move US timezone data and subroutines to new 
      module Timezones::US where they are automatically exported
    - Correct example code mistakes in the README
    - Add more details to the README

0.1.0  2022-09-21T13:43:46-05:00
    - Allow user to enter D instead of S, e.g., CDT or CST
      (the effect is the same internally)
    - Add tests for use of D instead of S
    - Upgrade workflow checkout to @v3

0.0.4  2021-12-06T09:18:56-06:00
    - Publish to the Raku module Zef repository

0.0.3  2021-10-25T17:31:50-05:00
    - Added information regarding this module versus
      DateTime::Timezones
    - Corrected pod format errors

0.0.2  2021-10-23T18:30:57-05:00
    - Correct typos and formatting

0.0.1  2021-10-23T10:19:11-05:00
    - Initial version